Got the not-equal quick fix test passing